--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "check": "biome check --write",
     "dev": "rsbuild dev --open",
     "format": "biome format --write",
-    "preview": "rsbuild preview"
+    "preview": "rsbuild preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
@@ -20,6 +22,7 @@
     "@rsbuild/plugin-react": "^1.3.4",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.9.2"
   }
 }
