--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fafoxrpl",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://fafoxrpl.com/",
   "type": "module",
   "scripts": {
     "build": "rsbuild build",
